k8s/devops-exercise-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-exercise-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
